# TpMn-Inf

./: .gitignore  CLAUDE.md  README.md  README_zh.md  TESTING.md
game_server/: CLAUDE.md  README.md  client.py  config.py  models.py
game_server/static/: mobile.html
game_server/tests/: conftest.py  test_atomic_rules.py  test_config.py  test_game_server.py  test_models.py
infer/: pyproject.toml
infer/amdk/: README.md  __init__.py  backend.py  fused_geglu_ffn.py  fused_rms_qkv_rope.py  plugin.py  tune_config.py  unified_attention_rdna3.py
infer/amdk/tests/: test_attention_correctness.py  test_fused_geglu.py  test_fused_qkv_rope.py
infer/bench/: baseline_bench.py
infer/kernels/: README.md  __init__.py  ascend_tune.json  attention.py  fused_geglu_ffn.py  fused_qkv_rope.py  tune_attention.py  tune_config.py
infer/kernels/tests/: test_attention_correctness.py  test_fused_geglu.py  test_fused_qkv_rope.py
infer/scripts/: launch_baseline.sh  launch_sglang.sh
infer/sglang_adapter/: README.md  __init__.py  backend.py  inject.py  plugin.py
infer/vllm_adapter/: __init__.py  backend.py  inject.py  plugin.py
training/eval/: report.py
training/eval/checks/: __init__.py  leak.py  persona.py  schema.py  slop.py
training/eval/human/: __init__.py  blind_ab.py
training/eval/judges/: __init__.py  pairwise.py  rubric.py
training/eval/judges/prompts/: pairwise_v1.md  rubric_v1.md
training/eval/runners/: __init__.py  replay.py  run_eval.py
